fixed responsivity for device index and playlist detail pages

--- a/templates/admin/devices/index.html.twig
+++ b/templates/admin/devices/index.html.twig
@@ -50,7 +50,7 @@
                                         <th>Využité uložiště</th>
                                         <th>První připojení</th>
                                         <th>Poslední připojení</th>
-                                        <th class="text-center">Akce</th>
+                                        <th class="text-center" style="min-width: 400px;">Akce</th>
                                     </tr>
                                     </thead>
                                     <tbody>
