--- a/templates/admin/playlists/detail.html.twig
+++ b/templates/admin/playlists/detail.html.twig
@@ -47,7 +47,7 @@
                                         <th>Vlastní doba přehrávání</th>
                                         <th>Přehrávat od</th>
                                         <th>Přehrávat do</th>
-                                        <th class="text-center">Akce</th>
+                                        <th class="text-center" style="min-width: 100px">Akce</th>
                                     </tr>
                                     </thead>
                                     <tbody>
