Code cleaning, fixed loop for youtube videos.

--- a/templates/admin/media/update.html.twig
+++ b/templates/admin/media/update.html.twig
@@ -24,6 +24,7 @@
                 <div class="row">
                     <!-- left column -->
                     <div class="col-md-12">
+                        {{ media_service.youtubeVideoIdFromUrl(media.mediaData) }}
                         <!-- general form elements -->
                         {{ component('MultimediaFormComponent', {
                             form: media_form,
