--- a/templates/components/MediaPlayerComponent.html.twig
+++ b/templates/components/MediaPlayerComponent.html.twig
@@ -21,7 +21,7 @@ attributes
                 <source src="{{ asset('uploads/multimedia/'~currentMedia.mediaData) }}" type="video/mp4">
             </video>
         {% elseif currentMedia.mediaType.value == "YOUTUBE" %}
-            <iframe src="{{ currentMedia.mediaData|raw }}&autoplay=1&cc_load_policy=1&controls=0&disablekb=1&enablejsapi=1&fs=0&loop=1&modestbranding=1&iv_load_policy=3" title="YouTube video player" frameborder="0"
+            <iframe src="{{ currentMedia.mediaData|raw }}&autoplay=1&cc_load_policy=1&controls=0&disablekb=1&enablejsapi=1&fs=0&loop=1&modestbranding=1&iv_load_policy=3&playlist={{ media_service.youtubeVideoIdFromUrl(currentMedia.mediaData|raw) }}" title="YouTube video player" frameborder="0"
                     class="youtube-iframe" id="youtube-player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
